# Dexter2

./: CMakeLists.txt  Dockerfile  README.md  compress4.cpp  database.h  index.html  index1.html  index2.html  lzw_compressor.cpp  lzw_compressor.h  server.cpp  web_compress.cpp
web/: CMakeLists.txt  main.cpp
